--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar {
+  width: 250px;
+  height: 100vh;
+  /* background-color: #333;
+  color: white; */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  border: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar a {
+  /* color: white; */
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar a:hover {
+  /* background-color: #575757; */
+  background-color: rgb(153, 153, 153);
+}
+
+.dropdown {
+  /* margin-top: 20px; */
+}
+
+.dropdown-btn {
+  background: none;
+  /* border: none;
+  color: white; */
+  font-size: 16px;
+  text-align: left;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.dropdown-btn:hover {
+  /* background-color: #575757; */
+  background-color: rgb(153, 153, 153);
+}
+
+.dropdown-content {
+  margin-left: 15px;
+}
+
+.content {
+  flex: 1;
+ 
 }
