--- a/src/components/NavbarDarkExample/NavbarDarkExample.css
+++ b/src/components/NavbarDarkExample/NavbarDarkExample.css
@@ -22,20 +22,21 @@
   width: 250px;
   background-color: #343a40;
   z-index: 100;
-  color: white;
+  color: rgb(81, 97, 152);
   padding: 0;
   display: flex;
   flex-direction: column;
 }
 
 .NavbarDarkExample .section-title {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
-  color: #1f1e1e;
-  padding: 3px 20px;
+  color: #8f7ad6;
+  padding: 3px 0;
   border-top: 1px solid #ffffff;
-  background-color: #686767;
+  /* background-color: #686767; */
   text-align: left;
+  text-transform: uppercase;
 
 }
 
