--- a/src/components/NavbarDarkExample/NavbarDarkExample.scss
+++ b/src/components/NavbarDarkExample/NavbarDarkExample.scss
@@ -1,87 +1,85 @@
-.NavbarDarkExample .navbar-nav {
-  width: 230px;
+@import "../../variables.scss";
+
+.NavbarDarkExample .container-fluid {
+  background-color: $background-color;
+  width: 250px;
+  border-right: 1px solid $border-color;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
 }
 
 .dropdown-menu a,
 .dropdown-menu button {
   display: block;
   padding: 5px 10px;
-  color: #333;
+  color: $text-color;
   text-decoration: none;
-  background-color: white;
+  background-color: $background-color;
   border: none;
   width: 100%;
   text-align: left;
-  font-size: 16px;
+  font-size: $font-size-sm;
 }
+
 .NavbarDarkExample {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
-  width: 250px;
-  background-color: #343a40;
+  // width: $navbar-width; // Предположим, что переменная для ширины навигации у вас есть
+  background-color: $background-color;
   z-index: 100;
-  color: rgb(81, 97, 152);
+  color: $text-color;
   padding: 0;
   display: flex;
   flex-direction: column;
 }
 
 .NavbarDarkExample .section-title {
-  font-size: 0.8rem;
-  font-weight: 400;
-  color: #8f7ad6;
+  font-size: $font-size-sm;
+  font-weight: $font-weight-normal;
+  color: $text-color;
   padding: 3px 0;
-  border-top: 1px solid #ffffff;
-  /* background-color: #686767; */
   text-align: left;
   text-transform: uppercase;
-
+  border-bottom: 1px solid $border-color;
 }
 
 .NavbarDarkExample .nav-link {
-  color: #ffffff;
-  font-size: 0.9rem;
+  color: $text-color;
+  font-size: $font-size-base;
   padding: 5px 10px;
   letter-spacing: 1px;
-
 }
 
 .NavbarDarkExample .nav-link:hover {
-  background-color: #6c757d;
+  background-color: $button-hover;
   color: #fff;
 }
 
 .NavbarDarkExample .nav-dropdown-menu {
-  background-color: #495057; /* Darker background for dropdown */
+  background-color: $background-color;
   padding: 5px 0;
 }
 
 .NavbarDarkExample .nav-dropdown-item {
-  color: #b4a4a4;
+  color: $text-color;
   padding: 10px 15px;
-  font-size: 8px;
+  font-size: $font-size-sm;
 }
 
 .NavbarDarkExample .nav-dropdown-item:hover {
-  background-color: #6c757d;
+  background-color: $button-hover;
   color: #fff;
 }
 
 .NavbarDarkExample .navbar-brand {
-  color: #fff;
-  font-size: 1.2rem;
+  color: $text-color;
+  font-size: $font-size-lg;
   padding: 20px;
   margin-bottom: 20px;
-}
-
-.NavbarDarkExample .container-fluid {
-  /* overflow-y: scroll; */
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
 }
 
 .NavbarDarkExample .nav-dropdown {
@@ -89,12 +87,12 @@
 }
 
 .NavbarDarkExample .nav-dropdown-item.active {
-  background-color: #007bff;
+  background-color: $success-color;
   color: white;
 }
 
 .NavbarDarkExample .nav-link.active {
-  background-color: #007bff;
+  background-color: $success-color;
 }
 
 .NavbarDarkExample .section-title:first-of-type {
@@ -105,8 +103,15 @@
 .NavbarDarkExample .section-title + .nav-dropdown {
   margin-top: -10px;
 }
+
 ::after {
   position: absolute;
   top: 15px;
   right: 10%;
+}
+
+.dropdown-menu a:hover,
+.dropdown-menu button:hover .dropdown-item:focus {
+  background-color: $button-hover;
+  cursor: pointer;
 }
