--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,20 +1,20 @@
 $primary-color: #007bff;
 $success-color: #28a745;
 $danger-color: #dc3545;
-$text-color: #343a40;
-$background-color: #DFE3E7;
-$border-color: #dee2e6;
+$text-color: #646f7c;
+$background-color: #dfe3e7;
+$border-color: #babec2;
 $breadcrumb-bg: #ffffff;
 $card-bg: #ffffff;
 $table-hover: #f1f3f5;
 $input-border: #ced4da;
 $button-hover: darken($primary-color, 10%);
 
-
-$font-family-primary: 'IBM Plex Sans', Helvetica, Arial, serif;;
-$font-size-base: 16px;
-$font-size-sm: 14px;
+$font-family: Rubik, Helvetica, Arial, serif;
+$font-size-base: 14px;
+$font-size-sm: 12px;
 $font-size-lg: 18px;
 $font-weight-normal: 400;
+$font-weight-normal-bold: 00;
 $font-weight-bold: 700;
 $line-height-base: 1.5;
