--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,7 @@ $primary-color: #007bff;
 $success-color: #28a745;
 $danger-color: #dc3545;
 $text-color: #646f7c;
-$background-color: #dfe3e7;
+$background-color: #edf0f7;
 $border-color: #babec2;
 $breadcrumb-bg: #ffffff;
 $card-bg: #ffffff;
