--- a/src/components/NavbarDarkExample/NavbarDarkExample.scss
+++ b/src/components/NavbarDarkExample/NavbarDarkExample.scss
@@ -7,7 +7,6 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  // padding-top: 20px;
 }
 .navbar-nav {
   width: 100%;
@@ -29,9 +28,13 @@
   border: none;
   width: 100%;
   text-align: left;
-  font-size: $font-size-sm;
+  font-size: $font-size-base;
 }
-
+.navbar-expand .navbar-nav .dropdown-menu {
+  position: unset;
+  padding: 0;
+  border-radius: 1px;
+}
 .NavbarDarkExample {
   position: fixed;
   top: 0;
@@ -47,7 +50,7 @@
 }
 
 .NavbarDarkExample .section-title {
-  font-size: $font-size-sm;
+  font-size: $font-size-base;
   font-weight: $font-weight-normal;
   color: $text-color;
   // padding: 3px 0;
