--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #007bff;
 $success-color: #28a745;
+$success-color-hover: #1b5a29;
 $danger-color: #dc3545;
 $text-color: #646f7c;
 $background-color: #edf0f7;
@@ -9,6 +10,8 @@ $card-bg: #ffffff;
 $table-hover: #f1f3f5;
 $input-border: #ced4da;
 $button-hover: darken($primary-color, 10%);
+$secondary-color: #dacc0d;
+$secondary-color-hover: #877f0a;
 
 $font-family: Rubik, Helvetica, Arial, serif;
 $font-size-base: 14px;
