--- a/src/App.scss
+++ b/src/App.scss
@@ -2,19 +2,19 @@
 .app {
   display: flex;
   height: 100vh; /* Full height */
+  background-color: $background-color;
 }
 
 .main {
   flex-grow: 1; /* Main content will take up remaining space */
   margin-left: 250px; /* Sidebar width */
-  background-color: #f0f0f0;
+
   overflow-y: hidden; /* Allow scroll if content overflows */
   background-color: $background-color;
-
 }
 
 /* Navbar/Sidebar styles */
 .content {
   padding: 0 20px;
-  
+  background-color: $background-color;
 }
