--- a/src/components/NavbarDarkExample/NavbarDarkExample.scss
+++ b/src/components/NavbarDarkExample/NavbarDarkExample.scss
@@ -1,18 +1,20 @@
 @import "../../variables.scss";
 
 .NavbarDarkExample .container-fluid {
-  background-color: $background-color;
+  background-color: rgb(248, 247, 245);
   width: 250px;
-  border-right: 1px solid $border-color;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
   height: 100vh;
+  border-radius: 0 10px 10px 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .navbar-nav {
   width: 100%;
-  margin-top: 20%;
-
-  gap: 20px;
+  margin-top: 10%;
+  gap: 10px;
 }
 .navbar-expand {
   width: 100%;
@@ -43,8 +45,8 @@
   // width: $navbar-width; // Предположим, что переменная для ширины навигации у вас есть
   background-color: $background-color;
   z-index: 100;
-  color: $text-color;
-  padding: 0;
+  color: $text-color-secondary;
+  padding: 0px;
   display: flex;
   flex-direction: column;
 }
@@ -52,24 +54,30 @@
 .NavbarDarkExample .section-title {
   font-size: $font-size-base;
   font-weight: $font-weight-normal;
-  color: $text-color;
-  // padding: 3px 0;
+  color: $text-color-secondary;
   text-align: left;
   text-transform: uppercase;
-  border-bottom: 1px solid $border-color;
+  padding: 5px 15px;
+  cursor: default;
+  background-color: white;
 }
 
 .NavbarDarkExample .nav-link {
-  color: $text-color;
+  color: $text-color-secondary;
   font-size: $font-size-base;
   font-family: $font-family;
-  padding: 5px 10px;
+  // padding: 5px px;
   letter-spacing: 0.5px;
   font-weight: $font-weight-normal-bold;
+  display: flex;
+  padding: 10px 50px;
+  align-items: baseline;
+  justify-content: flex-start;
+  gap: 10px;
 }
 
 .NavbarDarkExample .nav-link:hover {
-  background-color: $button-hover;
+  background-color: $primary-color;
   color: #fff;
 }
 
@@ -92,8 +100,9 @@
 .NavbarDarkExample .navbar-brand {
   color: $text-color;
   font-size: $font-size-lg;
-  padding: 5px;
-  margin-bottom: 0px;
+  padding: 0;
+  margin: 0;
+  // margin-bottom: 10px;
 }
 
 .NavbarDarkExample .nav-dropdown {
@@ -114,14 +123,55 @@
   border-top: none;
 }
 
-::after {
-  position: absolute;
-  top: 15px;
-  right: 10%;
-}
-
 .dropdown-menu a:hover,
 .dropdown-menu button:hover .dropdown-item:focus {
-  background-color: $button-hover;
+  background-color: white;
   cursor: pointer;
+  color: $text-color-secondary;
+}
+.navbar-expand .navbar-nav .nav-link .dropdown-toggle {
+  padding-right: var(--bs-navbar-nav-link-padding-x);
+  padding-left: var(--bs-navbar-nav-link-padding-x);
+  padding-left: 25px;
+  align-items: baseline;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-right: var(--bs-navbar-nav-link-padding-x);
+  padding-left: var(--bs-navbar-nav-link-padding-x);
+  padding-left: 25px;
+  padding-bottom: 5px;
+  align-items: baseline;
+}
+
+.dropdown-icon {
+  width: 20px;
+  filter: opacity(0.6);
+}
+
+.dropdown-toggle::after {
+  display: inline-block;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: "";
+  border-top: 0;
+  border-right: 0.3em solid transparent;
+  border-bottom: 10px;
+  border-left: 0.3em solid transparent;
+}
+
+.navbar-nav .nav-link.active,
+.navbar-nav .nav-link.show {
+  color: $text-color;
+}
+
+.dropdown-menu.show {
+  display: block;
+  background-color: $background-color;
+}
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+    width: 100%;
+  }
 }
