--- a/src/components/Pages/Offices/style.scss
+++ b/src/components/Pages/Offices/style.scss
@@ -68,7 +68,7 @@ select:focus {
   background-color: $button-hover;
 }
 
-/* Стили для компонента All */
+/* Стили для компонента all */
 .offices-all-container {
   display: flex;
   flex-direction: column;
