--- a/src/variables.scss
+++ b/src/variables.scss
@@ -14,11 +14,11 @@ $button-hover: darken($primary-color, 10%);
 $secondary-color: #dacc0d;
 $secondary-color-hover: #877f0a;
 
-$font-family: Rubik, Helvetica, Arial, serif;
+$font-family: "Roboto Flex", sans-serif;
 $font-size-base: 14px;
 $font-size-sm: 12px;
 $font-size-lg: 18px;
-$font-weight-normal: 400;
-$font-weight-normal-bold: 500;
+$font-weight-normal: 300;
+$font-weight-normal-bold: 400;
 $font-weight-bold: 700;
 $line-height-base: 1.5;
