--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 
 .main {
   flex-grow: 1; /* Main content will take up remaining space */
-  margin-left: 250px; /* Sidebar width */
+  // margin-left: 250px; /* Sidebar width */
 
   overflow-y: hidden; /* Allow scroll if content overflows */
   background-color: $background-color;
