--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,10 @@
-$primary-color: #5cbd79;
+$primary-color: #3f5e83;
 $success-color: #28a745;
 $success-color-hover: #1b5a29;
 $danger-color: #dc3545;
-$text-color: black;
-$text-color-secondary: #718096;
-$background-color: #f7f3f2;
+$text-color: #2b3674;
+$text-color-secondary: #707EAE;
+$background-color: #ffffff;
 $border-color: #babec2;
 $breadcrumb-bg: #ffffff;
 $card-bg: #ffffff;
