--- a/src/components/Pages/Offices/style.scss
+++ b/src/components/Pages/Offices/style.scss
@@ -118,3 +118,60 @@ select:focus {
 .table tr:hover {
   background-color: $table-hover;
 }
+
+.breadcrumbs {
+  font-size: 14px;
+  color: #555;
+}
+
+.breadcrumbs a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.breadcrumbs a:hover {
+  text-decoration: underline;
+}
+
+.breadcrumbs span {
+  color: #333;
+}
+.d-row {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  width: 100%;
+}
+.d-row-left {
+  display: flex;
+}
+.p-2 {
+  padding: 2px 5px 2px 5px !important;
+  font-size: $font-size-base;
+  background-color: $primary-color;
+  border: 0;
+  border-radius: 2px;
+}
+
+.p-2:hover {
+  background-color: $success-color;
+  border: 0;
+}
+.navigation-underline {
+  width: 100%;
+  padding: 0;
+  margin: 3px;
+}
+
+.btn-danger,
+.btn-warning {
+  padding: 3px 5px;
+
+  border-radius: 2px;
+  background-color: white;
+  color: $primary-color;
+  border: 0;
+}
+.btn-danger:hover {
+  background-color: red;
+}
