--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,6 +12,7 @@ $table-hover: #f1f3f5;
 $input-border: #ced4da;
 // $button-hover: darken($primary-color, 10%);
 $button-hover: mix(black, $primary-color, 10%);
+$context-bg-color: rgb(242, 244, 243);
 
 $secondary-color: #dacc0d;
 $secondary-color-hover: #877f0a;
