--- a/src/components/Pages/Departments/style.scss
+++ b/src/components/Pages/Departments/style.scss
@@ -75,7 +75,7 @@ select:focus {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: $background-color;
+  background-color: $context-bg-color;
 }
 
 .department-all-list {
