--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -136,7 +136,7 @@ textarea:focus {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: $background-color;
+  background-color: $context-bg-color;
 }
 
 .visitor-all-list {
