--- a/src/components/Pages/UserPermissions/style.scss
+++ b/src/components/Pages/UserPermissions/style.scss
@@ -2,6 +2,16 @@ $form-background: #fff;
 $primary-color: #007bff;
 $hover-color: darken($primary-color, 10%);
 
+.user-add-container{
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
 
 .form-container {
     background-color: $form-background;
